style: Fix styling for logo on small screens

--- a/chemwar/static/css/custom-style.css
+++ b/chemwar/static/css/custom-style.css
@@ -9,6 +9,16 @@ body {
   height: 100%;
 }
 
+@media (max-width: 768px) {
+  .sidebar-brand-icon {
+    height: 4.375rem;
+  }
+}
+
+.sidebar-brand-icon img {
+  height: 100%;
+}
+
 .viewDivBase {
   padding: 0;
   margin: 0;
@@ -115,11 +125,11 @@ main {
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: #ffffff;
-    transition: background-color 5000s ease-in-out 0s;
-    box-shadow: inset 0 0 20px 20px #23232329;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #ffffff;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px #23232329;
 }
